--- a/signup.html
+++ b/signup.html
@@ -10,11 +10,12 @@
   <link rel="stylesheet" href="public/styles/main.css">
   <script src="src/js/theme-toggle.js"></script>
   <script src="src/js/script.js" defer></script>
+  <script src="src/js/validation.js" defer></script>
   <title>Sign up - Bolt</title>
 </head>
 
-<body class="h-screen grid bg-trb-grey4 dark:bg-trb-black2 text-trb-black2 dark:text-trb-grey4">
-  <header class="flex flex-col justify-between p-6 md:flex-row md:items-center shadow-[0_1px_16px_rgba(255,120,0,0.2)] md:shadow-[0_2px_10px_rgba(45,45,45,0.1)] relative ">
+<body class="h-screen grid text-trb-black2 dark:text-trb-grey4 bg-trb-orange4 bg-opacity-10 dark:bg-trb-grey0">
+  <header class="flex flex-col justify-between p-6 md:flex-row md:items-center bg-trb-grey4 dark:bg-trb-black2 shadow-[0_1px_16px_rgba(255,120,0,0.2)] md:shadow-[0_2px_10px_rgba(45,45,45,0.1)] relative ">
     <a href="index.html">
         <svg width="147" height="39" class="w-[87px] md:w-auto">
             <use href="/public/img/bolt-logo.svg#bolt"></use>
@@ -71,24 +72,25 @@
     <div class="w-full max-w-4xl xl:max-w-7xl grid items-center gap-8 md:grid-cols-2 [&>*+*]:mt-6">
       <div class="max-w-md">
         <div class="[&>*+*]:mt-2">
-          <h1 class="text-4xl xl:text-5xl font-heading-bold font-black text-trb-orange3 dark:text-trb-orange1">Sign up.</h1>
+          <h1 class="text-4xl xl:text-5xl font-heading-bold font-black text-trb-orange3">Sign up.</h1>
           <p class="text-sm xl:text-lg max-w-[45ch] text-trb-black3 dark:text-trb-grey3">Welcome to Bolt account creation. Enjoy all the benefits it offers.</p>
         </div>
-        <form action="" class="grid mt-6 mb-8 [&>*+*]:mt-6" novalidate>
+        <form action="" id="form-signup" class="grid mt-6 mb-8 [&>*+*]:mt-6" novalidate>
           <label for="name"><span class="sr-only">Name</span><input type="text" id="name"
-              placeholder="Your name*"></label>
+              placeholder="Your name*" class="input"></label>
           <label for="email"><span class="sr-only">Email</span><input type="email" id="email"
-              placeholder="Your email*"></label>
+              placeholder="Your email*" class="input"></label>
           <label for="password"><span class="sr-only">Password</span><input type="password" id="password"
-              placeholder="Your password*"></label>
-          <label for="terms" class="label-checkbox"><input type="checkbox" id="terms" class="checkbox" required>Please confirm that you
+              placeholder="Your password*" class="input"></label>
+          <label for="terms" class="grid grid-cols-[auto_1fr] gap-2 text-sm text-trb-black3 dark:text-trb-grey3"><input type="checkbox" id="terms" class="appearance-none w-6 h-6 border-2 bg-trb-grey4 border-trb-black3 dark:border-trb-grey3 rounded-md 
+            checked:bg-trb-orange1" required>Please confirm that you
             have read and understood
             the Terms and Conditions and Privacy Policy of the site.*</label>
           <button type="submit" class="button button--full">Create account</button>
         </form>
-        <p>If you all ready have account, please <span class="text-trb-orange3 dark:text-trb-orange1 hover:text-trb-orange1 dark:hover:text-trb-orange3"><a href="login.html">Log in</a></span></p>
+        <p>If you all ready have account, please <span class="text-trb-orange3 hover:text-trb-orange1"><a href="login.html">Log in</a></span></p>
       </div>
-    <div class="relative after:absolute after:top-0 after:bottom-0 after:left-0 after:right-0 after:bg-trb-orange1 after:mix-blend-hue">
+    <div class="relative after:absolute after:top-0 after:bottom-0 after:left-0 after:right-0 dark:after:bg-trb-orange1 dark:after:mix-blend-hue">
       <img src="public/img/signup/sign-up-illustration.png" alt="illustration of a man with jetpacks flying to the sky"
         width="520" height="520" class="max-md:hidden dark:invert">
       <!-- widths none, 437, 520 -->
