--- a/index.html
+++ b/index.html
@@ -71,65 +71,64 @@
             <!-- end -->
         </nav>
     </header>
-    <main class="">
+    <main>
         <div class="max-w-screen-xl mx-auto pt-8 pb-12 px-[2.5%] xl:py-20 grid items-center gap-8 md:grid-cols-2">
             <div class="[&>*+*]:mt-6 max-w-[420px] xl:max-w-[63ch]">
-                <h1 class="font-heading-bold font-black text-5xl xl:text-7xl leading-snug xl:leading-normal text-trb-orange3 dark:text-trb-orange1">Strikingly fast <span
-                        class="text-black dark:text-white">QR codes</span>.</h1>
-                <p class="text-sm xl:text-lg text-trb-black3 dark:text-trb-grey3">You are one Bolt away from never being too slow again</p>
+                <h1
+                    class="font-heading-bold font-black text-5xl xl:text-7xl leading-snug xl:leading-normal text-trb-orange3 dark:text-trb-orange1">
+                    Strikingly fast <span class="text-black dark:text-white">QR codes</span>.</h1>
+                <p class="text-sm xl:text-lg text-trb-black3 dark:text-trb-grey3">You are one Bolt away from never being
+                    too slow again</p>
                 <div class="grid gap-6 lg:grid-cols-2">
                     <a href="#" class="button button--full">Generate QR Codes</a>
                     <a href="signup.html" class="button button--outline">Sign up</a>
                 </div>
             </div>
-            <div class="relative after:absolute after:top-0 after:bottom-0 after:left-0 after:right-0 after:bg-trb-orange1 after:mix-blend-hue">
+            <div
+                class="relative after:absolute after:top-0 after:bottom-0 after:left-0 after:right-0 after:bg-trb-orange1 after:mix-blend-hue">
                 <img src="public/img/home/qr-code-purchase.png" alt="illustration of a man scanning qr code on a bottle"
                     width="600" height="600" class="w-full max-w-[217px] md:max-w-[382px] xl:max-w-none dark:invert">
             </div>
             <!-- widths 217, 382, 600 -->
         </div>
-        <section id="generator">
-            <div class="max-w-screen-xl mx-auto pt-8 pb-12 px-[2.5%] md:py-20 flow">
-                <div class="flow--small">
-                    <h2 class="">QR code Generator.</h2>
-                    <p>Your not sure whether to use Dynamic or Static QR codes? Get familiar with both and choose
+        <section id="generator" class="bg-trb-grey2 bg-opacity-20">
+            <div class="max-w-screen-xl mx-auto pt-8 pb-12 px-[2.5%] md:py-20  [&>*+*]:mt-6">
+                <div class="[&>*+*]:mt-3">
+                    <h2 class="font-heading-bold text-4xl xl:text-5xl">QR code Generator.</h2>
+                    <p class="text-sm xl:text-lg text-trb-black3 dark:text-trb-grey3 max-w-[45ch]">Your not sure whether
+                        to use Dynamic or Static QR codes? Get familiar with both and choose
                         wisely.</p>
                 </div>
-                <div class="wrapper-generator reverse">
-                    <div class="flow--small justify-right">
-                        <h3>
-                            <svg class="icons-deco" width="22" height="22" aria-hidden="true" focusable="false">
+                <div class="grid items-center justify-items-stretch md:grid-cols-2 md:pt-20">
+                    <div class="[&>*+*]:mt-3 text-sm xl:text-lg text-trb-black3 dark:text-trb-grey3 max-w-[45ch] md:justify-self-end">
+                        <h3 class="font-heading text-[1.7rem] xl:text-4xl font-bold">
+                            <svg class="inline text-trb-orange1" width="22" height="22" aria-hidden="true" focusable="false">
                                 <use href="/public/img/home/staticdynamic/dynamic-icon.SVG#dynamic"></use>
                             </svg>
                             <span>Dynamic QR codes</span>
                         </h3>
-                        <p>Have you ever wanted to change the destination of your QR code?
-                            If your answer is yes, Dynamic QR codes are perfect for you. They allow you to change the
-                            destination of
-                            the
-                            QR
-                            code on-the-fly, whenever you want. It combines multiple technologies to make this happen in
-                            the
-                            background
-                            with
-                            the help of our Links tool.</p>
-                        <ul class="list--staticdynamic">
-                            <li>Advanced scan statistics</li>
-                            <li>Change URL destination dynamically</li>
-                            <li>Scheduling, expiration limits, A/B Rotation</li>
-                            <li>Password protection</li>
-                            <li>Country, device & language re-targeting</li>
+                        <p>Have you ever wanted to change the destination of your QR code? If your answer is yes,
+                            Dynamic QR codes are perfect for you. They allow you to change the
+                            destination of the QR code on-the-fly, whenever you want. It combines multiple technologies
+                            to make this happen in the background with the help of our Links tool.</p>
+                        <ul class="mb-4">
+                            <li class="list-item-deco">Advanced scan statistics</li>
+                            <li class="list-item-deco">Change URL destination dynamically</li>
+                            <li class="list-item-deco">Scheduling, expiration limits, A/B Rotation</li>
+                            <li class="list-item-deco">Password protection</li>
+                            <li class="list-item-deco">Country, device & language re-targeting</li>
                         </ul>
                     </div>
                     <iframe width="660" height="393" src="https://www.youtube.com/embed/VWvkhPFKSxY" loading="lazy"
                         title="YouTube video player"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        allowfullscreen class="w-full max-w-[344px] md:max-w-[475px] xl:max-w-none rounded-2xl"></iframe>
+                        allowfullscreen
+                        class="w-full max-w-[344px] md:max-w-[475px] xl:max-w-none h-full rounded-2xl md:order-first"></iframe>
                 </div>
-                <div class="wrapper-generator">
-                    <div class="flow--small">
-                        <h3>
-                            <svg class="icons-deco" width="22" height="22" aria-hidden="true" focusable="false">
+                <div class="grid items-center justify-items-stretch md:grid-cols-2 md:pt-20">
+                    <div class="[&>*+*]:mt-3 text-sm xl:text-lg text-trb-black3 dark:text-trb-grey3 max-w-[45ch]">
+                        <h3 class="font-heading text-[1.7rem] xl:text-4xl font-bold">
+                            <svg class="inline text-trb-orange1" width="22" height="22" aria-hidden="true" focusable="false">
                                 <use href="/public/img/home/staticdynamic/static-icon.SVG#static"></use>
                             </svg>
                             <span>Static QR codes</span>
@@ -139,20 +138,21 @@
                             embedded into the
                             QR
                             code. Once generated and printed for real-world usage, it can't be changed. </p>
-                        <ul class="list--staticdynamic">
-                            <li>Fully customizable</li>
-                            <li>No scan limit</li>
-                            <li>No data saved on our servers</li>
+                        <ul class="mb-4">
+                            <li class="list-item-deco">Fully customizable</li>
+                            <li class="list-item-deco">No scan limit</li>
+                            <li class="list-item-deco">No data saved on our servers</li>
                         </ul>
                     </div>
                     <iframe width="660" height="393" src="https://www.youtube.com/embed/VWvkhPFKSxY" loading="lazy"
                         title="YouTube video player"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        allowfullscreen class="w-full max-w-[344px] md:max-w-[475px] xl:max-w-none rounded-2xl"></iframe>
+                        allowfullscreen
+                        class="w-full max-w-[344px] md:max-w-[475px] xl:max-w-none h-full rounded-2xl"></iframe>
                 </div>
             </div>
         </section>
-        <section id="features" class="flow">
+        <section id="features" class="[&>*+*]:mt-6 bg-trb-orange4 bg-opacity-10">
             <div class="max-w-screen-xl mx-auto pt-8 pb-12 px-[2.5%] md:py-20 flow">
                 <div class="flow--small">
                     <h2>With other features</h2>
@@ -193,9 +193,9 @@
             </div>
         </section>
         <section id="types">
-            <div class="max-w-screen-xl mx-auto pt-8 pb-12 px-[2.5%] md:py-20 flow">
-                <div class="flow--small">
-                    <h2>QR code types.</h2>
+            <div class="max-w-screen-xl mx-auto pt-8 pb-12 px-[2.5%] md:py-20 [&>*+*]:mt-6">
+                <div class="[&>*+*]:mt-3">
+                    <h2 class="">QR code types.</h2>
                     <p>QR codes can be used for multiple purposes! So here you have a large array of QR code templates
                         to choose
                         from
@@ -427,13 +427,16 @@
 
         </section>
     </main>
-    <footer class="grid max-md:pt-11 max-md:text-center items-end gap-7 bg-white dark:bg-trb-black3 md:grid-cols-[1fr_2fr_auto] md:grid-rows-[1fr_auto] md:pl-10">
+    <footer
+        class="grid max-md:pt-11 max-md:text-center items-end gap-7 bg-white dark:bg-trb-black3 md:grid-cols-[1fr_2fr_auto] md:grid-rows-[1fr_auto] md:pl-10">
         <div class="grid justify-center md:justify-start self-center gap-4">
-            <svg class="max-md:max-w-[99px] max-md:justify-self-center" width="136" height="26" aria-hidden="true" focusable="false">
+            <svg class="max-md:max-w-[99px] max-md:justify-self-center" width="136" height="26" aria-hidden="true"
+                focusable="false">
                 <use href="public/img/footer/taraba-logo-latin-full-color-white-1.svg#trblogo"></use>
             </svg>
             <ul class="grid grid-cols-[repeat(4,22.68px)] gap-2 text-trb-orange3 ">
-                <li><a href="https://www.linkedin.com/company/taraba-tech/" target="_blank" class="hover:text-trb-orange1">
+                <li><a href="https://www.linkedin.com/company/taraba-tech/" target="_blank"
+                        class="hover:text-trb-orange1">
                         <svg width="34" height="34" class="w-full h-full">
                             <use href="public/img/footer/linked-in-large.svg#linkedin"></use>
                         </svg>
@@ -443,7 +446,8 @@
                             <use href="public/img/footer/instagram-large.svg#instagram"></use>
                         </svg>
                     </a></li>
-                <li><a href="https://www.youtube.com/channel/UCa9GoEPzrYQQMeFDQUUMjIA" target="_blank" class="hover:text-trb-orange1">
+                <li><a href="https://www.youtube.com/channel/UCa9GoEPzrYQQMeFDQUUMjIA" target="_blank"
+                        class="hover:text-trb-orange1">
                         <svg width="34" height="34" class="w-full h-full">
                             <use href="public/img/footer/you-tube-large.svg#youtube"></use>
                         </svg>
@@ -455,7 +459,8 @@
                     </a></li>
             </ul>
         </div>
-        <nav aria-labelledby="bottomnav-title" id="bottomnav" class="grid gap-6 md:row-span-2 font-heading text-sm xl:text-base">
+        <nav aria-labelledby="bottomnav-title" id="bottomnav"
+            class="grid gap-6 md:row-span-2 font-heading text-sm xl:text-base">
             <h2 id="bottomnav-title" class="font-bold">Quick links</h2>
             <div class="grid gap-8 ">
                 <div class="grid gap-4 md:gap-2 underline">
@@ -484,7 +489,9 @@
                         src="public/img/footer/oakly-logo-full-color-9.svg" alt="oakly" width="63" height="16"></a>
             </div>
         </div>
-        <p class="pb-4"><small class="text-[0.5rem] xl:text-xs font-medium text-trb-black3 dark:text-trb-grey3">Copyright © 2022 Taraba. All rights reserved.</small></p>
+        <p class="pb-4"><small
+                class="text-[0.5rem] xl:text-xs font-medium text-trb-black3 dark:text-trb-grey3">Copyright © 2022
+                Taraba. All rights reserved.</small></p>
     </footer>
 </body>
 
