--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                 </ul>
             </div>
         </section>
-        <section id="pricing">
+        <section id="pricing" class="bg-trb-grey2 bg-opacity-30">
             <div class="max-w-screen-xl mx-auto pt-8 pb-12 px-[2.5%] md:py-20 flow">
                 <div class="flow--small">
                     <h2>Simple, transparent pricing.</h2>
@@ -338,13 +338,13 @@
                     <button class="button button--outline">Lifetime</button>
                 </div>
             </div>
-            <ul class="wrapper-horizontal">
-                <li class="card card--pricing">
-                    <div class="card__title">
-                        <h3><span class="txt-uppercase">Guest</span></h3>
-                        <p class="h2">Free</p>
+            <ul id="carousel" class="flex min-w-[14rem] pt-10 pb-20 px-[2.5%] gap-6 lg:justify-center overflow-x-auto snap-x">
+                <li class="basis-56 shrink-0 grid py-8 px-5 gap-2 xl:gap-4 bg-gradient-to-b from-trb-orange4 to-white rounded-2xl">
+                    <div class="grid gap-5">
+                        <h3 class="text-sm xl:text-lg border-b border-trb-black4 uppercase">Guest</h3>
+                        <p class="font-heading text-4xl xl:text-5xl font-black text-trb-black2">Free</p>
                     </div>
-                    <ul>
+                    <ul class="text-trb-black3">
                         <li>4 QR code types</li>
                         <li><s>4 QR code types</s></li>
                         <li><s>4 QR code types</s></li>
@@ -358,14 +358,14 @@
                         <li><s>4 QR code types</s></li>
                         <li><s>4 QR code types</s></li>
                     </ul>
-                    <a href="signup.html" class="button button--full">Choose plan</a>
+                    <a href="signup.html" class="button button--full mt-8">Choose plan</a>
                 </li>
-                <li class="card card--pricing">
-                    <div class="card__title">
-                        <h3><span class="txt-uppercase">Free</span> with registration</h3>
-                        <p class="h2">Free</p>
+                <li class="basis-56 shrink-0 grid py-8 px-5 gap-2 xl:gap-4 bg-gradient-to-b from-trb-orange4 to-white rounded-2xl">
+                    <div class="grid gap-5">
+                        <h3 class="text-sm xl:text-lg border-b border-trb-black4"><span class="uppercase">Free</span> with registration</h3>
+                        <p class="font-heading text-4xl xl:text-5xl font-black text-trb-black2">Free</p>
                     </div>
-                    <ul>
+                    <ul class="text-trb-black3">
                         <li>4 QR code types</li>
                         <li>4 QR code types</li>
                         <li>4 QR code types</li>
@@ -379,14 +379,14 @@
                         <li>4 QR code types</li>
                         <li>4 QR code types</li>
                     </ul>
-                    <a href="signup.html" class="button button--full">Choose plan</a>
+                    <a href="signup.html" class="button button--full mt-8">Choose plan</a>
                 </li>
-                <li class="card card--pricing card--special">
-                    <div class="card__title">
-                        <h3><span class="txt-uppercase">Profesional Pro</span></h3>
-                        <p class="h2">$5</p>
+                <li class="basis-56 shrink-0 grid py-8 px-5 gap-2 xl:gap-4 bg-gradient-to-b from-trb-orange4 to-white rounded-2xl">
+                    <div class="grid gap-5">
+                        <h3 class="text-sm xl:text-lg border-b border-trb-black4 uppercase">Profesional Pro</h3>
+                        <p class="font-heading text-4xl xl:text-5xl font-black text-trb-black2">$5</p>
                     </div>
-                    <ul>
+                    <ul class="text-trb-black3">
                         <li>4 QR code types</li>
                         <li>4 QR code types</li>
                         <li>4 QR code types</li>
@@ -400,14 +400,14 @@
                         <li>4 QR code types</li>
                         <li>4 QR code types</li>
                     </ul>
-                    <a href="signup.html" class="button button--full">Choose plan</a>
+                    <a href="signup.html" class="button button--full mt-8">Choose plan</a>
                 </li>
-                <li class="card card--pricing">
-                    <div class="card__title">
-                        <h3><span class="txt-uppercase">Business</span></h3>
-                        <p class="h2">$15</p>
+                <li class="basis-56 shrink-0 grid py-8 px-5 gap-2 xl:gap-4 bg-gradient-to-b from-trb-orange4 to-white rounded-2xl">
+                    <div class="grid gap-5">
+                        <h3 class="text-sm xl:text-lg border-b border-trb-black4 uppercase">Business</h3>
+                        <p class="font-heading text-4xl xl:text-5xl font-black text-trb-black2">$15</p>
                     </div>
-                    <ul>
+                    <ul class="text-trb-black3">
                         <li>4 QR code types</li>
                         <li>4 QR code types</li>
                         <li>4 QR code types</li>
@@ -421,7 +421,7 @@
                         <li>4 QR code types</li>
                         <li>4 QR code types</li>
                     </ul>
-                    <a href="signup.html" class="button button--full">Choose plan</a>
+                    <a href="signup.html" class="button button--full mt-8">Choose plan</a>
                 </li>
             </ul>
 
