--- a/index.html
+++ b/index.html
@@ -154,39 +154,39 @@
         </section>
         <section id="features" class="[&>*+*]:mt-6 bg-trb-orange4 bg-opacity-10">
             <div class="max-w-screen-xl mx-auto pt-8 pb-12 px-[2.5%] md:py-20 flow">
-                <div class="flow--small">
-                    <h2>With other features</h2>
+                <div class="[&>*+*]:mt-3 text-sm xl:text-lg text-trb-black3 dark:text-trb-grey3 max-w-[45ch]">
+                    <h2 class="font-heading-bold text-4xl font-black">With other features</h2>
                     <p>From QR code templates to custom domains, Bolt offers you all the features that you might need.
                     </p>
                 </div>
-                <ul class="flow wrapper-grid wrapper-grid--3">
-                    <li class="card card--features">
-                        <h3 class="card__title">QR templates</h3>
+                <ul class="[&>*+*]:mt-3 mt-6 grid items-baseline gap-8 md:grid-cols-2 lg:grid-cols-3">
+                    <li class="card card--features grid p-4 gap-2">
+                        <h3 class="features-deco">QR templates</h3>
                         <p>You get 13 built-in QR code templates to get you started right away.</p>
                     </li>
-                    <li class="card card--features">
-                        <h3 class="card__title">Privacy</h3>
+                    <li class="grid p-4 gap-2">
+                        <h3 class="features-deco">Privacy</h3>
                         <p>We do not store any data of your created QR codes, except the ones that you save in your
                             account
                             willingly.
                         </p>
                     </li>
-                    <li class="card card--features">
-                        <h3 class="card__title">Highly customizable</h3>
+                    <li class="grid p-4 gap-2">
+                        <h3 class="features-deco">Highly customizable</h3>
                         <p>Create the QR code you need, brand it with your own colors & logo.</p>
                     </li>
-                    <li class="card card--features">
-                        <h3 class="card__title">Tracking pixels</h3>
+                    <li class="grid p-4 gap-2">
+                        <h3 class="features-deco">Tracking pixels</h3>
                         <p>Facebook, Google Analytics, Google Tag Manager, LinkedIn, Pinterest, Twitter, Quora tracking
                             pixels
                             available.</p>
                     </li>
-                    <li class="card card--features">
-                        <h3 class="card__title">Projects</h3>
+                    <li class="grid p-4 gap-2">
+                        <h3 class="features-deco">Projects</h3>
                         <p>Easiest way to categorize your managed resources.</p>
                     </li>
-                    <li class="card card--features">
-                        <h3 class="card__title">Custom domains</h3>
+                    <li class="grid p-4 gap-2">
+                        <h3 class="features-deco">Custom domains</h3>
                         <p>Connect your own domain or use our predefined ones.</p>
                     </li>
                 </ul>
