--- a/login.html
+++ b/login.html
@@ -80,9 +80,9 @@
         </div>
         <form action="" class="grid mt-6 mb-8 [&>*+*]:mt-6">
           <label for="email"><span class="sr-only">Email</span><input type="email" id="email"
-              placeholder="Your email*" class="input"></label>
+              placeholder="Your email*" class="input text-trb-black2"></label>
           <label for="password"><span class="sr-only">Password</span><input type="password" id="password"
-              placeholder="Your password*" class="input"></label>
+              placeholder="Your password*" class="input text-trb-black2"></label>
           <label for="remember" class="grid grid-cols-[auto_1fr] gap-2 text-sm text-trb-black3 dark:text-trb-grey3">
             <input type="checkbox" id="remember" class="appearance-none w-6 h-6 border-2 bg-trb-grey4 border-trb-black3 dark:border-trb-grey3 rounded-md 
             checked:bg-trb-orange1">
