--- a/signup.html
+++ b/signup.html
@@ -75,13 +75,13 @@
           <h1 class="text-4xl xl:text-5xl font-heading-bold font-black text-trb-orange3">Sign up.</h1>
           <p class="text-sm xl:text-lg max-w-[45ch] text-trb-black3 dark:text-trb-grey3">Welcome to Bolt account creation. Enjoy all the benefits it offers.</p>
         </div>
-        <form action="" id="form-signup" class="grid mt-6 mb-8 [&>*+*]:mt-6" novalidate>
+        <form action="" id="form-signup" class="grid mt-6 mb-8 [&>*+*]:mt-6" novalida>
           <label for="name"><span class="sr-only">Name</span><input type="text" id="name"
-              placeholder="Your name*" class="input"></label>
+              placeholder="Your name*" class="input text-trb-black2"></label>
           <label for="email"><span class="sr-only">Email</span><input type="email" id="email"
-              placeholder="Your email*" class="input"></label>
+              placeholder="Your email*" class="input text-trb-black2"></label>
           <label for="password"><span class="sr-only">Password</span><input type="password" id="password"
-              placeholder="Your password*" class="input"></label>
+              placeholder="Your password*" class="input text-trb-black2"></label>
           <label for="terms" class="grid grid-cols-[auto_1fr] gap-2 text-sm text-trb-black3 dark:text-trb-grey3"><input type="checkbox" id="terms" class="appearance-none w-6 h-6 border-2 bg-trb-grey4 border-trb-black3 dark:border-trb-grey3 rounded-md 
             checked:bg-trb-orange1" required>Please confirm that you
             have read and understood
